--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -1,4 +1,10 @@
 @charset 'utf-8';
+#layout-md {
+  /*公共标题样式*/
+  /*公共商品列表样式*/
+  /*公共侧边导航样式*/
+  /*公共banner样式*/
+}
 .top {
   width: 100%;
   height: 27px;
@@ -194,6 +200,7 @@
   margin: 0 auto;
   width: 1190px;
 }
+/*公共标题样式 layout_md.less*/
 .floor-title {
   margin-top: 25px;
   float: left;
@@ -226,7 +233,7 @@
 }
 .floor-title h2 {
   float: left;
-  font-weight: 100;
+  font-weight: normal;
 }
 .floor-title .title-item-icon {
   display: inline-block;
@@ -247,6 +254,7 @@
   margin: 0 5px;
   color: #999;
 }
+/*公共商品列表样式 layout_md.less*/
 .md-warp-cont {
   float: left;
   overflow: hidden;
@@ -295,6 +303,7 @@
   color: #b4b4b4;
   text-decoration: line-through;
 }
+/*公共侧边导航样式 layout_md.less*/
 .md-warp-sidebar {
   float: left;
   width: 190px;
@@ -329,6 +338,7 @@
   font-weight: normal;
   color: #555;
 }
+/*公共banner样式 layout_md.less*/
 .md-warp-bn {
   float: left;
   width: 400px;
