--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -214,22 +214,32 @@
   overflow: hidden;
 }
 .floor-title .more {
+  margin-right: 5px;
   float: right;
   font-size: 12px;
   color: #999;
 }
 .floor-title .more b {
   display: inline-block;
-  margin-left: 3px;
+  margin-left: 5px;
   color: #999;
   font-size: 15px;
   font-weight: normal;
+  -webkit-transition: -webkit-transform 0.2s linear;
+  -moz-transition: -moz-transform 0.2s linear;
+  -o-transition: -o-transform 0.2s linear;
+  transition: transform .2s linear;
 }
 .floor-title .more:hover {
   color: #d11414;
 }
 .floor-title .more:hover b {
   color: #d11414;
+  -webkit-transform: scale(1.4);
+  -moz-transform: scale(1.4);
+  -ms-transform: scale(1.4);
+  -o-transform: scale(1.4);
+  transform: scale(1.4);
 }
 .floor-title h2 {
   float: left;
@@ -355,6 +365,20 @@
   border-right: none;
   overflow: hidden;
   font-family: \5FAE\8F6F\96C5\9ED1;
+}
+.md-warp-bn a img {
+  margin-left: -5px;
+  -webkit-transition: -webkit-transform 0.2s linear;
+  -moz-transition: -moz-transform 0.2s linear;
+  -o-transition: -o-transform 0.2s linear;
+  transition: transform .2s linear;
+}
+.md-warp-bn a img:hover {
+  -webkit-transform: translateX(5px);
+  -moz-transform: translateX(5px);
+  -ms-transform: translateX(5px);
+  -o-transform: translateX(5px);
+  transform: translateX(5px);
 }
 .md-warp-bn .md-warp-bn-info {
   position: absolute;
@@ -800,6 +824,13 @@
   margin: 0 auto;
   text-align: left;
 }
+.f-strength .f-strength-item-sub .align:hover .weinxi {
+  -webkit-transform: scale(1.4);
+  -moz-transform: scale(1.4);
+  -ms-transform: scale(1.4);
+  -o-transform: scale(1.4);
+  transform: scale(1.4);
+}
 .f-strength .f-strength-item-sub span {
   margin-bottom: 20px;
   font-size: 16px;
@@ -821,6 +852,10 @@
   height: 99px;
   background-color: #fff;
   background-position: -294px -205px;
+  -webkit-transition: -webkit-transform 0.2s linear;
+  -moz-transition: -moz-transform 0.2s linear;
+  -o-transition: -o-transform 0.2s linear;
+  transition: transform .2s linear;
 }
 .f-strength .f-strength-item-sub .weixin-tit {
   font-size: 12px;
