--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -619,6 +619,13 @@
             display:inline-block;
             margin: 0 auto;
             text-align: left;
+            &:hover .weinxi{
+                -webkit-transform:scale(1.4);
+                   -moz-transform:scale(1.4);
+                    -ms-transform:scale(1.4);
+                     -o-transform:scale(1.4);
+                        transform:scale(1.4);
+                }
         }
         span{
             margin-bottom: 20px;
@@ -640,6 +647,10 @@
             height: 99px;
             background-color: #fff;
             background-position: -294px -205px;
+            -webkit-transition: -webkit-transform .2s linear;
+               -moz-transition: -moz-transform .2s linear;
+                 -o-transition: -o-transform .2s linear;
+                    transition: transform .2s linear;
         }
         .weixin-tit{
             font-size: 12px;
