--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -5,11 +5,6 @@
   /*公共侧边导航样式*/
   /*公共banner样式*/
 }
-.top {
-  width: 100%;
-  height: 27px;
-  border-bottom: 1px solid #ddd;
-}
 .sprite {
   background: url(/static/src/img/sprite.png) no-repeat;
 }
@@ -75,6 +70,7 @@
   outline: none;
   font-size: 23px;
   color: #fff;
+  -webkit-font-smoothing: antialiased;
 }
 .nav {
   width: 100%;
