--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1427162011_4093766.eot'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_1427162011_4093766.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_1427162011_4093766.woff') format('woff'), /* chrome、firefox */
-  url('//at.alicdn.com/t/font_1427162011_4093766.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_1427162011_4093766.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_1428568850_104039.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1428568850_104039.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1428568850_104039.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1428568850_104039.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1428568850_104039.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont{
@@ -16,6 +16,74 @@
 }
 
 body{overflow-x: hidden;}
+
+.top{
+    width: 100%;
+    height:27px;
+    line-height: 27px;
+    border-bottom:1px solid #ddd;
+    font-size: 12px;
+    color:#666;
+    &-md{
+      width:1190px;
+      margin: 0 auto;
+    }
+}
+.top-r-nav{
+  float:right;
+}
+
+.top-l-nav{
+  float:left;
+
+  a{
+    display:inline-block;
+  }
+
+  .n-login{
+    display:none;
+
+    .qq-icon{
+      display:inline-block;
+      font-size: 20px;
+      color:#666;
+    }
+
+    .login-init{
+      width:40px;
+      height:25px;
+      text-align: center;
+    }
+    .login-init:before,.login-init:after{
+      position: relative;
+      top: 2px;
+      display: inline-block;
+      width:1px;
+      height:13px;
+      content:'';
+      background-color: #d7d7de;
+    }
+    .login-init:before{
+        left: -6px;
+    }
+    .login-init:after{
+      right:-6px;
+    }
+  }
+  .y-login{
+    a{margin: 0 5px;}
+    span{float:left;}
+    .user-name{
+      float:left;
+      margin-right: 5px;
+      max-width:100px;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      white-space: nowrap;
+      color:#0072c1;
+    }
+  }
+}
 
 #respond{
     .w990(){
