--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -2,11 +2,6 @@
 @import "common/module.less";
 @import "layout_md.less";
 
-.top{
-    width: 100%;
-    height:27px;
-    border-bottom:1px solid #ddd;
-}
 .sprite{background: url(/static/src/img/sprite.png) no-repeat;}
 
 .header{
@@ -70,6 +65,7 @@
             outline:none;
             font-size: 23px;
             color:#fff;
+            -webkit-font-smoothing: antialiased;
         }
     }
 .nav{
