--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -74,7 +74,6 @@
     border-bottom: 3px solid #d11414;
 }
 .nav-md {
-    position: relative;
     margin: 0 auto;
     padding-left: 190px;
     width: 1000px;
@@ -106,14 +105,15 @@
         }
     }
     .zs-inlet {
-        position: absolute;
-        right: 0;
-        top: -5px;
+        // position: absolute;
+        // right: 0;
+        // top: -5px;
         display: block;
+        margin-top: -5px;
         float: right;
         width: 200px;
         height: 38px;
-        background-position: 0 -72px;
+        background-position: 0 -71px;
     }
 }
 
