--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -78,7 +78,6 @@
   border-bottom: 3px solid #d11414;
 }
 .nav-md {
-  position: relative;
   margin: 0 auto;
   padding-left: 190px;
   width: 1000px;
@@ -107,14 +106,12 @@
   background-color: #d11414;
 }
 .nav-md .zs-inlet {
-  position: absolute;
-  right: 0;
-  top: -5px;
   display: block;
+  margin-top: -5px;
   float: right;
   width: 200px;
   height: 38px;
-  background-position: 0 -72px;
+  background-position: 0 -71px;
 }
 .banner {
   width: 100%;
