--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -1,11 +1,11 @@
 @import "common/module.less";
 @font-face {
   font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1428628859_7490587.eot'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_1428628859_7490587.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_1428628859_7490587.woff') format('woff'), /* chrome、firefox */
-  url('//at.alicdn.com/t/font_1428628859_7490587.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_1428628859_7490587.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_1428890355_2089026.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1428890355_2089026.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1428890355_2089026.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1428890355_2089026.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1428890355_2089026.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont{
@@ -171,6 +171,90 @@ body{overflow-x: hidden;}
     }
   }
 }
+
+.r-sidebar-md{
+  position:fixed;
+  top:0;
+  right:0;
+  width:40px;
+  height:700px;
+  background-color: #333;
+}
+.ie6 .r-sidebar-md{
+  position:absolute;
+}
+
+.r-side-box{
+  position:relative;
+  width:100%;
+  height:100%;
+  .r-side-cont{
+    position:absolute;
+    top:50%;
+    left:0;
+    margin-top: -200px;
+    height:400px;
+    li{
+      border:1px solid #383838;
+      border-left: 0;
+      border-right: 0;
+      margin-bottom: -1px;
+      a{
+        display:inline-block;
+        padding:5px 0;
+        width:40px;
+        color:#fff;
+        font-size: 20px;
+        text-align: center;
+        &:hover{
+          background-color:#d11414;
+        }
+      }
+      .go-top{
+        font-size: 14px;
+        span{
+          margin:0 auto;
+          .triangle-top(9, 5, #fff);
+          display:block;
+        }
+      }
+    }
+   .go-floor{
+      margin-top: 80px;
+      a{
+        display:inline-block;
+        padding:10px 0;
+        width:40px;
+        height:18px;
+        &:hover{
+          background-color: #d11414;
+          span{
+            border-radius: 0;
+            color:#fff;
+            background-color: #d11414;
+            font-size:14px;
+            box-shadow: none;
+          }
+        }
+      }
+      span{
+        display:block;
+        margin:0 auto;
+        width:18px;
+        height:18px;
+        line-height: 20px;
+        border-radius: 10px;
+        background-color: #fff;
+        font-family: \5fae\8f6f\96c5\9ed1;
+        font-size:0px;
+        color:#fff;
+        text-align: center;
+        box-shadow: 1px 1px 1px #888 inset;
+      }
+   } 
+  }
+}
+
 
 #respond{
     .w990(){
