--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -148,6 +148,7 @@ body{overflow-x: hidden;}
   }
   .n-site-map{
     .n-cont{
+      display:none;
       left:-190px;
       padding:5px 10px; 
       width:245px;
@@ -169,6 +170,9 @@ body{overflow-x: hidden;}
         a{display:inline-block;}
       }
     }
+  }
+  .n-float-box .n-cont-cur{
+    display:inline-block;
   }
 }
 
