--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -74,7 +74,6 @@
 }
 .nav {
   width: 100%;
-  height: 33px;
   border-bottom: 3px solid #d11414;
 }
 .nav-md {
@@ -111,7 +110,46 @@
   float: right;
   width: 200px;
   height: 38px;
+}
+.nav-md .zs-inlet .zs-zw,
+.nav-md .zs-inlet .zs-tit {
+  float: left;
+  display: inline-block;
+}
+.nav-md .zs-inlet .zs-zw {
+  width: 50px;
+  height: 38px;
+  overflow: hidden;
   background-position: 0 -71px;
+  -webkit-transition-property: background-position;
+  -webkit-transition-duration: .1s;
+  -webkit-transition-timing-function: linear;
+  transition-property: background-position;
+  transition-duration: .1s;
+  transition-timing-function: linear;
+}
+.nav-md .zs-inlet .zs-tit {
+  width: 130px;
+  height: 38px;
+  background-position: -48px -70px;
+  font-size: 0;
+}
+.nav-md .zs-inlet:hover .zs-zw {
+  background-position: 0 -74px;
+}
+@-webkit-keyframes 'zw' {
+  0% {
+    background-position: 0 -71px;
+  }
+  50% {
+    background-position: 0 -73px;
+  }
+  75% {
+    background-position: 0 -75px;
+  }
+  100% {
+    background-position: 0 -76px;
+  }
 }
 .banner {
   width: 100%;
