--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -74,7 +74,6 @@
 }
 .nav {
     width: 100%;
-    height: 33px;
     border-bottom: 3px solid #d11414;
 }
 .nav-md {
@@ -109,17 +108,57 @@
         }
     }
     .zs-inlet {
-        // position: absolute;
-        // right: 0;
-        // top: -5px;
         display: block;
         margin-top: -5px;
         float: right;
         width: 200px;
         height: 38px;
-        background-position: 0 -71px;
+        .zs-zw,.zs-tit{
+            float: left;
+            display:inline-block;
+        }
+        .zs-zw{
+            width: 50px;
+            height: 38px;
+            overflow:hidden;
+            background-position: 0 -71px;
+            -webkit-transition-property: background-position;
+            -webkit-transition-duration:.1s;
+            -webkit-transition-timing-function: linear;
+            transition-property: background-position;
+            transition-duration:.1s;
+            transition-timing-function: linear;
+        }
+        .zs-tit{
+            width: 130px;
+            height: 38px;
+            background-position: -48px -70px;
+            font-size: 0;
+        }
+        &:hover{
+            .zs-zw{
+                background-position: 0 -74px;
+            }
+        }
     }
 }
+
+ @-webkit-keyframes 'zw' {
+     0% {
+        background-position: 0 -71px;
+     }
+     50% {
+        background-position: 0 -73px;
+     }
+     75% {
+        background-position: 0 -75px;
+     }
+     100% {
+        background-position: 0 -76px;
+    }
+  }
+
+
 .banner {
     width: 100%;
     height: 340px;
