--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -259,6 +259,7 @@
   display: inline-block;
   line-height: 28px;
   margin-right: 15px;
+  font-family: \5FAE\8F6F\96C5\9ED1;
   color: #fff;
   white-space: nowrap;
 }
@@ -267,7 +268,70 @@
   margin-left: -200px;
   width: 200px;
   height: 340px;
-  background-color: blue;
+}
+.small-banner .small-panel {
+  position: relative;
+  height: 218px;
+  overflow: hidden;
+  background-color: #fff;
+}
+.small-banner .small-panel ul li {
+  width: 200px;
+  height: 218px;
+  float: left;
+}
+.small-banner .small-panel ul li a {
+  display: block;
+}
+.small-banner .small-panel .small-tab {
+  position: absolute;
+  bottom: 6px;
+  left: 10px;
+}
+.small-banner .small-panel .small-tab a {
+  display: inline-block;
+  margin-right: 3px;
+  width: 7px;
+  height: 7px;
+  border-radius: 100%;
+  background-color: #666;
+}
+.small-banner .small-panel .small-tab a:hover {
+  background-color: #d42424;
+}
+.small-banner .small-panel .small-tab .cur {
+  background-color: #d42424;
+}
+.small-banner .notice {
+  width: 200px;
+  height: 122px;
+  overflow: hidden;
+  font-family: \5FAE\8F6F\96C5\9ED1;
+  background-color: #fdf3f6;
+}
+.small-banner .notice-tab {
+  width: 201px;
+  height: 36px;
+  line-height: 36px;
+  border-top: 1px solid #e3e3e3;
+  background-color: #e3e3e3;
+}
+.small-banner .notice-tab a {
+  display: inline-block;
+  float: left;
+  width: 67px;
+  text-align: center;
+}
+.small-banner .notice-tab a:hover {
+  background-color: #fdf3f6;
+}
+.small-banner .notice-tab .cur {
+  background-color: #fdf3f6;
+}
+.small-banner .notice-cont-item a {
+  display: inline-block;
+  padding-left: 5px;
+  line-height: 28px;
 }
 .warp {
   padding-bottom: 110px;
