--- a/static/src/less/common/module.less
+++ b/static/src/less/common/module.less
@@ -242,7 +242,7 @@
 //##
 .linear-gradientDisable () {
     background-image: none;
-　　filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);  /* 禁用渐变 */
+// 　　filter: ~'progid:DXImageTransform.Microsoft.gradient(enabled=false)';  /* 禁用渐变 */
 }
 
 //##
