--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -98,6 +98,7 @@ body{overflow-x: hidden;}
         .n-cont{
           position:absolute;
           top:27px;
+          z-index: 100;
           border:1px solid #e4e4e4;
           background-color: #f2f2f2;
           a{
