--- a/static/src/css/header.css
+++ b/static/src/css/header.css
@@ -1,9 +1,8 @@
 @font-face {
   font-family: 'iconfont';
   src: url('//at.alicdn.com/t/font_1428890355_2089026.eot');
-  src: url('//at.alicdn.com/t/font_1428890355_2089026.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('//at.alicdn.com/t/font_1428890355_2089026.woff') format('woff'), /* chrome、firefox */ url('//at.alicdn.com/t/font_1428890355_2089026.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('//at.alicdn.com/t/font_1428890355_2089026.svg#iconfont') format('svg');
-  
   /* IE9*/
+  src: url('//at.alicdn.com/t/font_1428890355_2089026.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('//at.alicdn.com/t/font_1428890355_2089026.woff') format('woff'), /* chrome、firefox */ url('//at.alicdn.com/t/font_1428890355_2089026.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('//at.alicdn.com/t/font_1428890355_2089026.svg#iconfont') format('svg');
   /* iOS 4.1- */
 }
 .iconfont {
@@ -104,6 +103,7 @@ body {
 .top-r-nav .n-float-box .n-cont {
   position: absolute;
   top: 27px;
+  z-index: 100;
   border: 1px solid #e4e4e4;
   background-color: #f2f2f2;
 }
