【修改】优化css代码

--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -152,6 +152,7 @@
   }
 }
 .banner {
+  position: relative;
   width: 100%;
   height: 340px;
   background-color: red;
@@ -168,6 +169,7 @@
   background-color: red;
 }
 .banner-pannel .banner-cont {
+  position: relative;
   margin-left: 590px;
   width: 800px;
 }
@@ -186,6 +188,25 @@
   display: inline-block;
   width: 100%;
   height: 340px;
+}
+.banner-pannel .banner-cont .b-tab {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  margin-left: -78px;
+}
+.banner-pannel .banner-cont .b-tab a {
+  display: inline-block;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #000;
+  text-align: center;
+  color: #fff;
+}
+.banner-pannel .banner-cont .b-tab a:hover {
+  background-color: #c40000;
 }
 .sider {
   position: relative;
@@ -240,19 +261,20 @@
   display: inline-block;
   width: 0;
   height: 0;
+  line-height: 0;
   border-color: transparent transparent transparent #faf1f2;
   border-width: 4px 4px 4px 4px;
-  border-style: dashed  dashed dashed solid;
+  border-style: dashed dashed dashed solid;
+  font-size: 0;
 }
 .sider .sider-type-second {
   position: absolute;
   top: 0;
   left: 190px;
   height: 337px;
-  overflow: hidden;
   padding: 3px 22px 0;
   background-color: #000;
-  opacity: .8;
+  background-color: rgba(0, 0, 0, 0.8);
   filter: alpha(opacity=80);
 }
 .sider .sider-type-second a {
@@ -263,7 +285,11 @@
   color: #fff;
   white-space: nowrap;
 }
+.sider .sider-type-second a:hover {
+  text-decoration: underline;
+}
 .small-banner {
+  position: relative;
   float: left;
   margin-left: -200px;
   width: 200px;
@@ -293,6 +319,8 @@
   margin-right: 3px;
   width: 7px;
   height: 7px;
+  line-height: 0;
+  font-size: 0;
   border-radius: 100%;
   background-color: #666;
 }
@@ -315,12 +343,14 @@
   line-height: 36px;
   border-top: 1px solid #e3e3e3;
   background-color: #e3e3e3;
+  overflow: hidden;
 }
 .small-banner .notice-tab a {
   display: inline-block;
   float: left;
   width: 67px;
   text-align: center;
+  white-space: nowrap;
 }
 .small-banner .notice-tab a:hover {
   background-color: #fdf3f6;
@@ -436,6 +466,9 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.md-warp-cont li a img {
+  display: inline-block;
+}
 .md-warp-cont li .price-box {
   margin-top: 8px;
 }
@@ -484,11 +517,16 @@
 .md-warp-sidebar ul li a:hover {
   color: #d11414;
 }
+.md-warp-sidebar ul li a:hover b {
+  transform: scale(1.3);
+  color: #d11414;
+}
 .md-warp-sidebar ul li b {
   margin-right: 5px;
   display: inline-block;
   font-weight: normal;
   color: #555;
+  transition: transform .2s linear;
 }
 /*公共banner样式 layout_md.less*/
 .md-warp-bn {
@@ -553,6 +591,7 @@
   font-size: 14px;
   color: #fff;
   text-indent: 15px;
+  background-color: #cdcdcd;
   background-color: rgba(153, 153, 153, 0.5);
 }
 .md-warp-bn .md-warp-bn-info .bn-detail b {
@@ -654,8 +693,11 @@
 }
 .streamer {
   margin: 25px auto;
-  height: 130px;
-  background-color: #666;
+  height: 90px;
+  overflow: hidden;
+}
+.streamer a {
+  display: inline-block;
 }
 .expert {
   height: 283px;
@@ -711,6 +753,8 @@
 }
 .expert-save .expert-save-cont {
   width: 100%;
+  background-color: #fff;
+  overflow: hidden;
 }
 .expert-save .save-cont-item li {
   float: left;
@@ -949,7 +993,9 @@
   color: #888;
 }
 .f-strength .f-strength-item-up b {
-  display: block;
+  display: inline-block;
+  padding-top: 3px;
+  width: 100%;
   margin: 0 auto 8px;
   line-height: 49px;
   color: #ff4254;
@@ -988,8 +1034,8 @@
   display: block;
 }
 .f-strength .f-strength-item-sub .weinxi {
-  display: inline-block;
-  margin-bottom: 0px;
+  display: block;
+  margin: 0 auto 5px;
   width: 99px;
   height: 99px;
   background-color: #fff;
