--- a/static/src/css/header.css
+++ b/static/src/css/header.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: 'iconfont';
   src: url('//at.alicdn.com/t/font_1428890355_2089026.eot');
-  /* IE9*/
   src: url('//at.alicdn.com/t/font_1428890355_2089026.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('//at.alicdn.com/t/font_1428890355_2089026.woff') format('woff'), /* chrome、firefox */ url('//at.alicdn.com/t/font_1428890355_2089026.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('//at.alicdn.com/t/font_1428890355_2089026.svg#iconfont') format('svg');
+  
+  /* IE9*/
   /* iOS 4.1- */
 }
 .iconfont {
@@ -17,6 +18,8 @@ body {
   overflow-x: hidden;
 }
 .top {
+  position: relative;
+  z-index: 1000;
   width: 100%;
   height: 27px;
   line-height: 27px;
@@ -25,8 +28,8 @@ body {
   color: #666;
 }
 .top-md {
-  width: 1190px;
   margin: 0 auto;
+  width: 1190px;
 }
 .top-l-nav {
   float: left;
@@ -85,6 +88,9 @@ body {
   float: left;
   margin-right: 15px;
 }
+.top-r-nav li a {
+  display: inline-block;
+}
 .top-r-nav li .p-triangle {
   width: 0;
   height: 0;
@@ -96,6 +102,7 @@ body {
   border-color: #666666 transparent transparent transparent;
   border-style: solid dashed dashed dashed;
   border-width: 5px 4.5px 0 4.5px;
+  _vertical-align: text-bottom;
 }
 .top-r-nav .n-float-box {
   position: relative;
@@ -103,7 +110,6 @@ body {
 .top-r-nav .n-float-box .n-cont {
   position: absolute;
   top: 27px;
-  z-index: 100;
   border: 1px solid #e4e4e4;
   background-color: #f2f2f2;
 }
@@ -112,11 +118,13 @@ body {
 }
 .top-r-nav .n-float-box .n-cont .n-triangle {
   position: relative;
+  display: block;
 }
 .top-r-nav .n-float-box .n-cont .n-triangle i {
   position: absolute;
   top: -7px;
-  left: -7px;
+  left: 54px;
+  _left: 0px;
   width: 0;
   height: 0;
   line-height: 0;
@@ -131,7 +139,8 @@ body {
 .top-r-nav .n-float-box .n-cont .n-triangle b {
   position: absolute;
   top: -6px;
-  left: -6px;
+  left: 55px;
+  _left: 1px;
   width: 0;
   height: 0;
   line-height: 0;
@@ -199,6 +208,7 @@ body {
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 9999;
   width: 40px;
   height: 700px;
   background-color: #333;
@@ -356,6 +366,9 @@ body {
   .expert-save .save-cont-item li {
     width: 295px;
   }
+  .streamer a {
+    margin-left: -100px;
+  }
   .f-strength .f-strength-item {
     padding: 10px 0 0;
     width: 150px;
@@ -391,6 +404,9 @@ body {
 }
 .w990 .expert-save .save-cont-item li {
   width: 295px;
+}
+.w990 .streamer a {
+  margin-left: -100px;
 }
 .w990 .f-strength .f-strength-item {
   padding: 10px 0 0;
