--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -21,6 +21,8 @@
 body{overflow-x: hidden;}
 
 .top{
+    position:relative;
+    z-index: 1000;
     width: 100%;
     height:27px;
     line-height: 27px;
@@ -28,14 +30,13 @@ body{overflow-x: hidden;}
     font-size: 12px;
     color:#666;
     &-md{
-      width:1190px;
       margin: 0 auto;
+      width:1190px;
     }
 }
 
 .top-l-nav{
   float:left;
-
   a{
     display:inline-block;
   }
@@ -89,8 +90,12 @@ body{overflow-x: hidden;}
   li{
     float:left;
     margin-right: 15px;
+    a{
+      display:inline-block;
+    }
     .p-triangle{
       .triangle-bottom(9, 5, #666);
+      _vertical-align: text-bottom;
     }
   }
   .n-float-box{
@@ -98,7 +103,6 @@ body{overflow-x: hidden;}
         .n-cont{
           position:absolute;
           top:27px;
-          z-index: 100;
           border:1px solid #e4e4e4;
           background-color: #f2f2f2;
           a{
@@ -106,16 +110,19 @@ body{overflow-x: hidden;}
           }
           .n-triangle{
             position:relative;
+            display:block;
             i{
                 position: absolute;
                 top: -7px;
-                left: -7px;
+                left: 54px;
+                _left: 0px;
                .triangle-top(11, 7, #e4e4e4);
             }
             b{
                 position: absolute;
                 top: -6px;
-                left: -6px;
+                left: 55px;
+                _left: 1px;
                .triangle-top(9, 6, #f2f2f2);
             }
           }
@@ -183,6 +190,7 @@ body{overflow-x: hidden;}
   position:fixed;
   top:0;
   right:0;
+  z-index: 9999;
   width:40px;
   height:700px;
   background-color: #333;
@@ -324,7 +332,7 @@ body{overflow-x: hidden;}
 
             .save-cont-item li{ width: 295px; }
         }
-
+        .streamer a{ margin-left: -100px;}
         .f-strength .f-strength-item{
             padding: 10px 0 0;
             width:150px;
