--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -156,6 +156,7 @@
 
 
 .banner {
+    position:relative;
     width: 100%;
     height: 340px;
     background-color: red;
@@ -172,6 +173,7 @@
     background-color: red;
 
     .banner-cont {
+        position:relative;
         margin-left: 590px;
         width: 800px;
 
@@ -190,6 +192,25 @@
                     display: inline-block;
                     width: 100%;
                     height: 340px;
+                }
+            }
+        }
+        .b-tab{
+            position:absolute;
+            bottom:10px;
+            left:0;
+            margin-left: -78px;
+            a{
+                display:inline-block;
+                margin-right: 10px;
+                width:20px;
+                height:20px;
+                border-radius: 50%;
+                background-color: #000;
+                text-align: center;
+                color:#fff;
+                &:hover{
+                    background-color: #c40000;
                 }
             }
         }
@@ -250,9 +271,11 @@
                 display:inline-block;
                 width:0;
                 height:0;
+                line-height: 0;
                 border-color: transparent transparent transparent #faf1f2; 
                 border-width: 4px 4px 4px 4px;
-                border-style: dashed  dashed dashed solid;
+                border-style: dashed dashed dashed solid;
+                font-size: 0;
              }
         }
     }
@@ -261,10 +284,9 @@
         top: 0;
         left:190px; 
         height:337px;
-        overflow:hidden;
         padding:3px 22px 0;
-        background-color: #000;  
-        opacity: .8;
+        background-color: #000;
+        background-color: rgba(0, 0, 0, 0.8);
         filter: alpha(opacity=80);
         a{
             display:inline-block;
@@ -273,10 +295,14 @@
             font-family: \5FAE\8F6F\96C5\9ED1;
             color:#fff;
             white-space: nowrap;
+            &:hover{
+                text-decoration: underline;
+            }
         }
     }
 }
 .small-banner {
+    position:relative;
     float: left;
     margin-left: -200px;
     width: 200px;
@@ -305,6 +331,8 @@
                 margin-right: 3px;
                 width: 7px;
                 height: 7px;
+                line-height: 0;
+                font-size: 0;
                 border-radius: 100%;
                 background-color: #666;
                 &:hover{
@@ -328,11 +356,13 @@
             line-height: 36px;
             border-top: 1px solid #e3e3e3;
             background-color: #e3e3e3;
+            overflow:hidden;
             a{
                 display:inline-block;
                 float: left;
                 width: 67px;
                 text-align: center;
+                white-space: nowrap;
                 &:hover{
                     background-color: #fdf3f6;
                 }
@@ -479,8 +509,11 @@
 }
 .streamer {
     margin: 25px auto;
-    height: 130px;
-    background-color: #666;
+    height: 90px;
+    overflow:hidden;
+    a{
+        display:inline-block;
+    }
 }
 .expert {
     height: 283px;
@@ -530,6 +563,8 @@
         }
         .expert-save-cont {
             width: 100%;
+            background-color: #fff;
+            overflow:hidden;
         }
         .save-cont-item {
             li {
@@ -780,7 +815,9 @@
             color: #888;
         }
         b {
-            display: block;
+            display: inline-block;
+            padding-top: 3px;
+            width:100%;
             margin: 0 auto 8px;
             line-height: 49px;
             color: #ff4254;
@@ -820,8 +857,8 @@
             display: block;
         }
         .weinxi {
-            display: inline-block;
-            margin-bottom: 0px;
+            display: block;
+            margin: 0 auto 5px;
             width: 99px;
             height: 99px;
             background-color: #fff;
