--- a/static/src/less/layout_md.less
+++ b/static/src/less/layout_md.less
@@ -103,6 +103,9 @@
                         text-overflow: ellipsis;
                         white-space: nowrap;
                     }
+                    img{
+                        display:inline-block;
+                    }
                 }
                 .price-box {
                     margin-top: 8px;
@@ -156,6 +159,10 @@
 
                         &:hover {
                             color: #d11414;
+                            b{
+                                transform:scale(1.3);
+                                color: #d11414;
+                            }
                         }
                     }
                     b {
@@ -163,6 +170,7 @@
                         display: inline-block;
                         font-weight: normal;
                         color: #555;
+                        transition:transform .2s linear;
                     }
                 }
             }
@@ -233,6 +241,7 @@
                     font-size: 14px;
                     color: #fff;
                     text-indent: 15px;
+                    background-color: #cdcdcd;
                     background-color: rgba(153, 153, 153, 0.5);
 
                     b {
