--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -247,6 +247,9 @@
         }
     }
     .sider-type{
+        position:relative;
+        z-index: 11;
+        background-color: #fff;
         a{
             padding-left: 40px;
             display:block;
@@ -278,16 +281,25 @@
                 font-size: 0;
              }
         }
+        .sider-cur a{
+            color:#fff;
+            background-color: #731a1d;
+            padding-left: 45px;
+        }
     }
-    .sider-type-second{
+    .sider-type-item{
         position:absolute;
         top: 0;
         left:190px; 
+        z-index: 10;
+        display:none;
+        width: 102px;
         height:337px;
-        padding:3px 22px 0;
+        padding:3px 5px 0 12px;
         background-color: #000;
         background-color: rgba(0, 0, 0, 0.8);
         filter: alpha(opacity=80);
+        transition:transform .7s ease;
         a{
             display:inline-block;
             line-height: 28px;
@@ -299,6 +311,10 @@
                 text-decoration: underline;
             }
         }
+    }
+    .sider-type-cur{
+        padding-left: 20px;
+        display:block;
     }
 }
 .small-banner {
